--- a/kubernetes/flux/meta/repositories/helm/backube.yaml
+++ b/kubernetes/flux/meta/repositories/helm/backube.yaml
@@ -6,5 +6,6 @@ metadata:
   name: backube
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://backube.github.io/helm-charts
