--- a/kubernetes/flux/meta/repositories/helm/cilium.yaml
+++ b/kubernetes/flux/meta/repositories/helm/cilium.yaml
@@ -6,5 +6,6 @@ metadata:
   name: cilium
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://helm.cilium.io
