--- a/kubernetes/flux/meta/repositories/helm/cloudnative-pg.yaml
+++ b/kubernetes/flux/meta/repositories/helm/cloudnative-pg.yaml
@@ -6,5 +6,6 @@ metadata:
   name: cloudnative-pg
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://cloudnative-pg.github.io/charts
