--- a/kubernetes/flux/meta/repositories/helm/external-dns.yaml
+++ b/kubernetes/flux/meta/repositories/helm/external-dns.yaml
@@ -6,5 +6,6 @@ metadata:
   name: external-dns
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://kubernetes-sigs.github.io/external-dns
