--- a/kubernetes/flux/meta/repositories/helm/grafana.yaml
+++ b/kubernetes/flux/meta/repositories/helm/grafana.yaml
@@ -6,5 +6,6 @@ metadata:
   name: grafana
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://grafana.github.io/helm-charts
