--- a/kubernetes/flux/meta/repositories/helm/ingress-nginx.yaml
+++ b/kubernetes/flux/meta/repositories/helm/ingress-nginx.yaml
@@ -6,5 +6,6 @@ metadata:
   name: ingress-nginx
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://kubernetes.github.io/ingress-nginx
