--- a/kubernetes/flux/meta/repositories/helm/jetstack.yaml
+++ b/kubernetes/flux/meta/repositories/helm/jetstack.yaml
@@ -6,5 +6,6 @@ metadata:
   name: jetstack
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://charts.jetstack.io
