--- a/kubernetes/flux/meta/repositories/helm/kubernetes-dashboard.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kubernetes-dashboard.yaml
@@ -6,5 +6,6 @@ metadata:
   name: kubernetes-dashboard
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://kubernetes.github.io/dashboard
