--- a/kubernetes/flux/meta/repositories/helm/node-feature-discovery.yaml
+++ b/kubernetes/flux/meta/repositories/helm/node-feature-discovery.yaml
@@ -6,5 +6,6 @@ metadata:
   name: node-feature-discovery
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
