--- a/kubernetes/flux/meta/repositories/helm/nvidia-device-plugin.yaml
+++ b/kubernetes/flux/meta/repositories/helm/nvidia-device-plugin.yaml
@@ -6,5 +6,6 @@ metadata:
   name: nvidia-device-plugin
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://nvidia.github.io/k8s-device-plugin
