--- a/kubernetes/flux/meta/repositories/helm/openebs.yaml
+++ b/kubernetes/flux/meta/repositories/helm/openebs.yaml
@@ -6,5 +6,6 @@ metadata:
   name: openebs
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://openebs.github.io/openebs
