--- a/kubernetes/flux/meta/repositories/helm/wiremind.yaml
+++ b/kubernetes/flux/meta/repositories/helm/wiremind.yaml
@@ -6,5 +6,6 @@ metadata:
   name: wiremind
   namespace: flux-system
 spec:
-  interval: 12h
+  interval: 1h
+  timeout: 3m
   url: https://wiremind.github.io/wiremind-helm-charts/
