--- a/kubernetes/bootstrap/helmfile.yaml
+++ b/kubernetes/bootstrap/helmfile.yaml
@@ -2,8 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
 helmDefaults:
-  timeout: 600
   force: true
+  timeout: 600
   wait: true
   waitForJobs: true
 
@@ -28,53 +28,41 @@ releases:
     namespace: kube-system
     chart: cilium/cilium
     version: 1.17.1
-    values:
-      - ../apps/kube-system/cilium/app/helm-values.yaml
-    needs:
-      - kube-system/prometheus-operator-crds
+    values: ["../apps/kube-system/cilium/app/helm-values.yaml"]
+    needs: ["kube-system/prometheus-operator-crds"]
 
   - name: coredns
     namespace: kube-system
     chart: coredns/coredns
     version: 1.39.0
-    values:
-      - ../apps/kube-system/coredns/app/helm-values.yaml
-    needs:
-      - kube-system/cilium
+    values: ["../apps/kube-system/coredns/app/helm-values.yaml"]
+    needs: ["kube-system/cilium"]
 
   - name: cert-manager
     namespace: security
     chart: jetstack/cert-manager
     version: v1.17.1
-    values:
-      - ../apps/security/cert-manager/app/helm-values.yaml
-    needs:
-      - kube-system/coredns
+    values: ["../apps/security/cert-manager/app/helm-values.yaml"]
+    needs: ["kube-system/coredns"]
 
   - name: external-secrets
     namespace: security
     chart: oci://ghcr.io/external-secrets/charts/external-secrets
     version: 0.14.2
-    values:
-      - ../apps/security/external-secrets/app/helm-values.yaml
-    needs:
-      - security/cert-manager
+    values: ["../apps/security/external-secrets/app/helm-values.yaml"]
+    needs: ["security/cert-manager"]
 
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.14.0
-    values:
-      - ../apps/flux-system/flux-operator/app/helm-values.yaml
-    needs:
-      - security/external-secrets
+    values: ["../apps/flux-system/flux-operator/app/helm-values.yaml"]
+    needs: ["security/external-secrets"]
 
   - name: flux-instance
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.14.0
     wait: false
-    values:
-      - ../apps/flux-system/flux-operator/instance/helm-values.yaml
-    needs:
-      - flux-system/flux-operator
+    values: ["../apps/flux-system/flux-operator/instance/helm-values.yaml"]
+    needs: ["flux-system/flux-operator"]
