feat(kps): let flux manage prometheus operator crds

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -15,16 +15,15 @@ spec:
         name: prometheus-community
         namespace: flux-system
   install:
+    crds: Skip
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
+    crds: Skip
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
-    - name: democratic-csi-iscsi
-      namespace: storage
   valuesFrom:
     - kind: ConfigMap
       name: kube-state-metrics-config
