--- a/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
@@ -10,6 +10,10 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
+    - name: democratic-csi-iscsi
+      namespace: storage
+    - name: kube-prometheus-stack-crds
+      namespace: observability
     - name: onepassword-store
       namespace: security
   interval: 30m
@@ -46,3 +50,24 @@ spec:
   targetNamespace: *namespace
   timeout: 5m
   wait: false
+---
+# yaml-language-server: $schema=https://crd.movishell.pl/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app kube-prometheus-stack-crds
+  namespace: &namespace observability
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  interval: 30m
+  path: ./kubernetes/apps/observability/kube-prometheus-stack/crds
+  prune: false # Should never be deleted.
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  wait: true
+
