--- a/kubernetes/bootstrap/helmfile.yaml
+++ b/kubernetes/bootstrap/helmfile.yaml
@@ -15,21 +15,17 @@ repositories:
     url: https://charts.jetstack.io
 
 releases:
-  - name: prometheus-operator-crds
-    namespace: kube-system
+  - name: kube-prometheus-stack-crds
+    namespace: observability
     chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
     version: 18.0.0
-    values:
-      - crds:
-          annotations:
-            helm.sh/resource-policy: keep
 
   - name: cilium
     namespace: kube-system
     chart: cilium/cilium
     version: 1.17.1
     values: ["../apps/kube-system/cilium/app/helm-values.yaml"]
-    needs: ["kube-system/prometheus-operator-crds"]
+    needs: ["observability/kube-prometheus-stack-crds"]
 
   - name: coredns
     namespace: kube-system
