--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -155,6 +155,7 @@ spec:
             'trusted_proxies' => array(
               0 => '127.0.0.1',
               1 => '${CLUSTER_POD_CIDR}',
+              2 => '192.168.0.1/32',
             ),
             'forwarded_for_headers' => array(
               0 => 'HTTP_X_FORWARDED_FOR',
@@ -285,6 +286,7 @@ spec:
         nginx.ingress.kubernetes.io/server-snippet: |-
           server_tokens off;
           proxy_hide_header X-Powered-By;
+          proxy_intercept_errors off;
           rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
           rewrite ^/.well-known/nodeinfo /index.php/.well-known/nodeinfo last;
           rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
