fix(nextcloud): bring back headers in nginx

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -310,6 +310,9 @@ spec:
           }
     nginx:
       enabled: true
+      config:
+        headers:
+          "Strict-Transport-Security": "max-age=15552000; includeSubDomains;"
       securityContext:
         runAsGroup: 82
       resources:
