--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -273,7 +273,13 @@ spec:
       annotations:
         # Enable ingress sticky-sessions to loadbalance over multiple pods.
         nginx.ingress.kubernetes.io/affinity: cookie
-        nginx.ingress.kubernetes.io/enable-cors: "false"
+        # nginx.ingress.kubernetes.io/enable-cors: "false"
+        nginx.ingress.kubernetes.io/enable-cors: "true"
+        nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+        nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+        nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
+        nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length,Content-Range"
+        nginx.ingress.kubernetes.io/cors-max-age: "86400"
         nginx.ingress.kubernetes.io/proxy-body-size: "10G"
         nginx.ingress.kubernetes.io/client-body-buffer-size: "512M"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
