--- a/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
@@ -26,6 +26,7 @@ spec:
     controllers:
       system-upgrade-controller:
         strategy: RollingUpdate
+        replicas: 2
         containers:
           system-upgrade-controller:
             image:
