--- a/kubernetes/apps/system/system-upgrade-controller/plans/kubernetes.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/plans/kubernetes.yaml
@@ -19,12 +19,7 @@ spec:
         operator: Exists
   upgrade:
     image: ghcr.io/siderolabs/talosctl:${TALOS_VERSION}
-    envs:
-      - name: NODE
-        valueFrom:
-          fieldRef:
-            fieldPath: status.hostIP
     args:
-      - --nodes=$(NODE)
+      - --nodes=$(SYSTEM_UPGRADE_NODE_NAME)
       - upgrade-k8s
       - --to=$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
