--- a/kubernetes/apps/system/system-upgrade-controller/plans/talos.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/plans/talos.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   version: ${TALOS_VERSION}
   concurrency: 1
+  postCompleteDelay: 2m
   exclusive: true
   serviceAccountName: system-upgrade-controller
   secrets:
@@ -15,17 +16,11 @@ spec:
       ignoreUpdates: true
   nodeSelector:
     matchExpressions:
-      - key: kubernetes.io/os
-        operator: In
-        values: ["linux"]
+      - key: kubernetes.io/hostname
+        operator: Exists
   upgrade:
     image: ghcr.io/jfroy/tnu:0.4.0
-    envs:
-      - name: NODE
-        valueFrom:
-          fieldRef:
-            fieldPath: spec.nodeName
     args:
-      - --node=$(NODE)
+      - --node=$(SYSTEM_UPGRADE_NODE_NAME)
       - --tag=$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
       - --powercycle
