--- a/.github/renovate/customManagers.json5
+++ b/.github/renovate/customManagers.json5
@@ -3,7 +3,7 @@
   "customManagers": [
     {
       "customType": "regex",
-      "description": ["Process YAML custom dependencies"],
+      "description": ["Process annotated dependencies"],
       "fileMatch": [
         "(^|/).taskfiles/.+\\.ya?ml$",
         "(^|/)talos/.+\\.ya?ml$",
