--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanager.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanager.yaml
@@ -22,18 +22,18 @@ spec:
           - name: severity
             value: warning|critical
             matchType: =~
-  inhibitRules:
-    - equal: ["alertname", "namespace"]
-      sourceMatch:
-        - name: severity
-          value: critical
-          matchType: =
-      targetMatch:
-        - name: severity
-          value: warning
-          matchType: =
+  # inhibitRules:
+  #   - equal: ["alertname", "namespace"]
+  #     sourceMatch:
+  #       - name: severity
+  #         value: critical
+  #         matchType: =
+  #     targetMatch:
+  #       - name: severity
+  #         value: warning
+  #         matchType: =
   receivers:
-    - name: "null"
+    # - name: "null"
     - name: pushover
       pushoverConfigs:
         - html: true
