--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanager.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanager.yaml
@@ -6,18 +6,18 @@ metadata:
   name: alertmanager
 spec:
   route:
-    groupBy: ["alertname", "job"]
+    groupBy:
+      - alertname
+      - job
     groupInterval: 10m
     groupWait: 1m
-    receiver: pushover
     repeatInterval: 12h
     routes:
-      - receiver: pushover
-        matchers:
+      - matchers:
           - name: severity
             value: warning|critical
             matchType: "=~"  # Regular expression match
-      - receiver: pushover  # Fallback for other unmatched alerts
+        receiver: pushover
   receivers:
     - name: pushover
       pushoverConfigs:
