fix(kps): troubleshoot alertmanager config

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanager.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanager.yaml
@@ -6,32 +6,34 @@ metadata:
   name: &name alertmanager
 spec:
   route:
+    receiver: pushover  # Default receiver
     groupBy: ["alertname", "job"]
     groupInterval: 10m
     groupWait: 1m
-    receiver: pushover
     repeatInterval: 12h
     routes:
       - receiver: "null"
         matchers:
           - name: alertname
-            value: InfoInhibitor
-            matchType: =
+            value: "InfoInhibitor"
+            matchType: "="
+        continue: false  # Do not evaluate further routes for this alert
       - receiver: pushover
         matchers:
           - name: severity
-            value: critical
-            matchType: =
+            value: "critical|warning"
+            matchType: "Regex"
+        continue: false  # Do not evaluate further routes for these alerts
   inhibitRules:
     - equal: ["alertname", "namespace"]
       sourceMatch:
         - name: severity
-          value: critical
-          matchType: =
+          value: "critical"
+          matchType: "="
       targetMatch:
         - name: severity
-          value: warning
-          matchType: =
+          value: "warning"
+          matchType: "="
   receivers:
     - name: "null"
     - name: pushover
