--- a/kubernetes/apps/downloads/qbittorrent/app/kustomization.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/kustomization.yaml
@@ -3,6 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./resources/grafana-dashboard.yaml
+  - ./resources/qbittorrent-categories.sops.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ./resources/qbittorrent-categories.sops.yaml
