--- a/kubernetes/apps/observability/exporters/blackbox-exporter/app/resources/grafana-dashboard.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/app/resources/grafana-dashboard.yaml
@@ -8,7 +8,7 @@ metadata:
   annotations:
     grafana_folder: "Network"
 data:
-  blackbox-exporter.json: |-
+  blackbox-exporter-http.json: |-
     {
       "__inputs": [
         {
@@ -1001,6 +1001,7 @@ data:
       "version": 1,
       "weekStart": ""
     }
+  blackbox-exporter-icmp.json: |-
     {
       "__inputs": [
         {
