--- a/kubernetes/apps/observability/exporters/blackbox-exporter/app/kustomization.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/app/kustomization.yaml
@@ -3,6 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./resources/grafana-dashboard.yaml
   - ./helmrelease.yaml
-  - ./probe.yaml
+  # - ./probe.yaml
